Table: --equal and --notequal now work on text columns also
Until now these two operators would only work on columns with numeric data
types. But in many situations, when the column has string columns, it is
necessary to select certain rows of string columns. With this commit, it is
now possible to select rows based on string equality also.

In the process, the (previously static) `txt_trim_space' function is now
moved to the library as `gal_txt_trim_space'. Also, the previous
`gal_options_parse_name_and_values' function has now become generic
(working on numbers and strings), so it has become static to only work in
`options.c', there are two new functions for parsing numbers or strings:
`gal_options_parse_name_and_float64s' and
`gal_options_parse_name_and_strings'.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,13 @@ See the end of the file for license conditions.
   Fits:
    --datasum: Calculate and print the given HDU's "datasum" to stdout.
 
+  Table:
+   --equal: Can now work on columns with string type also.
+   --notequal: Can now work on columns with string type also.
+
+  Library:
+   - gal_txt_trim_space: trim white space before and after a string.
+
 ** Removed features
 
 ** Changed features
