CosmicCalculator: --listlines option to help in remembering line names
Until now, when using CosmicCalculator with spectral lines, it was hard to
remember the exact line name used (you had to go to the proper section of
the manual).

With this commit CosmicCalculator now has the `--listlines' option that
will list all the spectral lines that Gnuastro's spectra library
recognizes. Maybe later as more lines are added, we can specify ranges like
(UV, visible, IR or etc). But for now, there aren't too many.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,12 @@ See the end of the file for license conditions.
 
 ** New features
 
+  CosmicCalculator:
+   --listlines: list the pre-defined spectral line wavelengths and names
+     (which you can use with the `--obsline' and `--lineatz' options). This
+     is convenient when you forget the specific name of the spectral line
+     used within Gnuastro.
+
   Fits:
    --datasum: Calculate and print the given HDU's "datasum" to stdout.
 
